@@ -48,8 +48,8 @@ remove = Alien::Libarchive
 
 [Prereqs]
 ExtUtils::ParseXS = 3.21
-Test2 = 0.000042
-Test2::Suite = 0.000028
+Test2 = 1.302015
+Test2::Suite = 0.000030
 
 [Author::Plicease::Upload]
 cpan = 1
