@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Require non-experimental Test2/Test-Simple and Test2::Suite
 
 0.06      2016-04-27 14:52:12 -0400
   - Better diagnostic when there is a link exception.
